# bat-lab

./: .gitignore  MLModel.ipynb  MLModel2.ipynb  README.md  TestModel.ipynb  app.py  batlab.sql  batlabexe.bat  git_cheatsheet.txt  package-lock.json  pyproject.toml  requirements.txt  test.bat  test.ipynb
cache_mels/: _EPTHOT_00362_NEOCAP_TCUBAT-AS_20250622_174657_000_256000sr_96mels.npy  _EPTHOT_00367_NEOCAP_TCUBAT-AS_20250622_174703_000_256000sr_96mels.npy  _EPTHOT_00386_NEOCAP_TCUBAT-AS_20250630_182355_000_256000sr_96mels.npy  _EPTHOT_00387_NoID_TCUBAT-AS_20250622_181735_000_256000sr_96mels.npy  _EPTHOT_00388_NEOCAP_TCUBAT-AS_20250622_180418_000_256000sr_96mels.npy  _EPTHOT_00428_NEOCAP_TCUBAT-AS_20250630_182340_000_256000sr_96mels.npy  _EPTHOT_00429_NoID_TCUBAT-AS_20250630_182324_000_256000sr_96mels.npy  _MYOTRI_00001_NEOCAP_24F3190166BC0811_20250603_182636_000T_256000sr_96mels.npy  _MYOTRI_00001_PIPHES_TCUBAT-AS_20250617_012736_000_256000sr_96mels.npy  _MYOTRI_00002_PIPHES_TCUBAT-AS_20250613_205228_000_256000sr_96mels.npy  _MYOTRI_00003_MINNAT_24F3190166BC0811_20250530_181318_000T_256000sr_96mels.npy  _MYOTRI_00003_PIPHES_TCUBAT-AS_20250616_234041_000_256000sr_96mels.npy  _MYOTRI_00004_MINNAT_24F3190166BC0811_20250530_181412_000T_256000sr_96mels.npy  _MYOTRI_00004_PIPHES_TCUBAT-AS_20250615_054135_000_256000sr_96mels.npy  _MYOTRI_00005_MINNAT_24F3190166BC0811_20250530_182300_000T_256000sr_96mels.npy  _MYOTRI_00005_PIPHES_TCUBAT-AS_20250617_055821_000_256000sr_96mels.npy  _MYOTRI_00006_MINNAT_24F3190166BC0811_20250530_181812_000T_256000sr_96mels.npy  (+222 more)
ml/: .gitignore  (+3 more)
(+304 files in other folders)
